# etchr

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
etchr/: Cargo.toml  README.md
etchr-core/: Cargo.toml  README.md  index.html
etchr-core/src/: device.rs  lib.rs  os_options.rs  platform.rs  read.rs  write.rs
etchr-core/src/platform/: linux.rs  windows.rs
etchr/src/: main.rs
