[workspace]
resolver = "2"
members = [
    "etchr",
    "etchr-core",
]

[workspace.package]
authors = ["Sai Sree Kartheek Adivi <sskartheekadivi@gmail.com>"]
description = "A fast, safe, and interactive CLI for flashing disk images, with a decoupled core library."
version = "1.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sskartheekadivi/etchr"
keywords = ["flasher", "usb", "sdcard", "image", "cli"]
categories = ["command-line-utilities", "hardware-support"]

[workspace.metadata.deb]
maintainer = "Sai Sree Kartheek Adivi <sskartheekadivi@gmail.com>"
