[package]
name = "etchr-core"
description = "The core, UI-agnostic library for the etchr disk imaging utility. Provides safe, fast, and verified reading and writing of disk images to block devices."
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
sha2 = "0.10.9"
flate2 = "1.0"
xz2 = "0.1"
zstd = "0.13"
tempfile = "3"
sysinfo = "0.37.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["ioctl"] }
libc = "0.2.174"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
] }
